--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,2 +1,13 @@
 ---
-
+galaxy_info:
+  author: Bob Winter
+  description: A role to build a kickstart for an EL7 host as the basis of an Oracle database installation.
+  company: SPR
+  issue_tracker_url:
+  license: MIT
+  min_ansible_version: 2.0
+  platforms:
+  - name: EL
+    versions:
+    - 7
+dependencies: []
